--- a/themes/hipro_mobile/Public/assets/css/style.css
+++ b/themes/hipro_mobile/Public/assets/css/style.css
@@ -68,7 +68,7 @@ header .menubox .menus{ background: url(../images/menu_icon.png) center center n
 .newslist-container .news-list li a .content{width: 100%;height: 100%;text-align: center;display:flex;flex-direction:column;align-items:center; justify-content:center;padding: 20px;background-color: #fff;}
 .newslist-container .news-list li a .content h2{font-size:18px;width: 100%;color:#333333;height: 30px;font-weight: 600;font-family: fzlthft;line-height: 30px;margin-bottom: 5px;}
 .newslist-container .news-list li a .content p{font-size:14px;color:#919191;line-height: 28px;font-family: fzlthft;}
-.newslist-container .more{display: block;width: 2.4rem;height: 0.8rem;text-align: center;line-height: 0.8rem;color:#393f4d;font-size: 0.32rem;font-weight: bold;border: 1px solid #1d1e22;margin: 0.5rem auto;}
+.newslist-container .more{display: block;width: 2.4rem;height: .67rem;text-align: center;line-height: .65rem;color:#393f4d;font-size: .27rem;border: 1px solid #1d1e22;margin: 0.5rem auto;}
 .wrapper .nomore{height:35px;line-height:35px;text-align:center;margin-top: 10px;margin-bottom: 10px;}
 /* 新闻详情 */
 .detail-heading{padding: 0.6rem 1.3rem 0.4rem;}
@@ -127,3 +127,38 @@ header .menubox .menus{ background: url(../images/menu_icon.png) center center n
 
 .s-header,.s-header p{font-family: fzlthft;}
 .s-header p{margin-top: 10px;font-weight: bold;}
+
+/* 教练 */
+.cocah-wrap{padding-top:1rem;padding-bottom:.4rem;background-color: #fff;}
+.main-tit{text-align: center;}
+.main-tit span{display: inline-block;padding: 0 .4rem;font-family: fzlthft;letter-spacing: 1px;height: 100%;line-height:.67rem;font-size: .24rem;margin: .6rem auto;background-color: #000000;color:#ffffff;min-width: 1.6rem}
+.cocah-wrap .news-list li{margin-bottom: .53rem;overflow: hidden;}
+.cocah-wrap .news-list li a{display: block;position: relative;min-height: 5rem;}
+.cocah-wrap li .cover{display:block;width: 5rem;height: 5rem;background-position:center;background-size: cover;background-repeat: no-repeat;flex-basis: 5rem;position: absolute;top: 0;left: 0;}
+.cocah-wrap .news-list li .content{flex: 1 1 auto;padding: 0;height: auto;margin-left:5.53rem;display: flex;flex-direction: column;justify-content: center;min-height: 5rem;padding-right:.4rem;}
+.cocah-wrap .news-list li .content .p-head{margin-bottom: .53rem;}
+.cocah-wrap .news-list li .content .p-head h1{font-size:.4rem;color:#000000;font-family: fzltthjt;line-height: .4rem;margin-bottom:.13rem;}
+.cocah-wrap .news-list li .content .p-head p{color:#7d7d7d;font-size: .24rem;font-family: fzltzch;line-height: .5rem;}
+.cocah-wrap .news-list li .content>p{color:#b2b2b2;font-size: .21rem;line-height:.6rem;font-family: fzlthft;}
+.cocah-wrap .more{display: block;width: 2.4rem;height: 0.67rem;text-align: center;line-height: 0.65rem;color:#393f4d;font-size: 0.27rem;font-weight: bold;border: 1px solid #1d1e22;margin: 0 auto;margin-top:.67rem;}
+
+.member-wrap.cocah-wrap li{margin-bottom: 0;}
+.member-wrap.cocah-wrap li:nth-child(even) .cover{left: auto;right: 0;}
+.member-wrap.cocah-wrap .news-list li:nth-child(even) .content{margin-right: 5.53rem;padding-left: .4rem;margin-left: auto;padding-right: 0;text-align: right;}
+.member-wrap.cocah-wrap li .content .p-head{margin-bottom: 0;}
+.member-wrap.cocah-wrap li .content .p-head h1{font-family: fzltcxhjt;font-size: .48rem;margin-bottom: .27rem;font-weight: 600;}
+.member-wrap.cocah-wrap li .content .p-head p{font-family: fzltcxhjt;line-height:.8rem;font-weight: 550;font-size: .21rem;}
+
+/* 课程 */
+.curriculum-wrap{background-color: #fff;padding-top:1rem;}
+.curriculum-wrap.newslist-container .news-list li{padding-top: 0;text-align: center;margin-bottom: .4rem;}
+.curriculum-wrap.newslist-container .news-list li a .content h2{font-family:fzltthft;font-weight: normal;font-size: .48rem;margin-bottom:.4rem;line-height: .65rem;height:.6rem;}
+.curriculum-wrap.newslist-container .news-list li a .content{padding:.53rem;padding-bottom: 0;}
+.curriculum-wrap.newslist-container .news-list li a .content>p{font-size: .32rem;}
+.curriculum-wrap.newslist-container .news-list li a img{width: 100%;height: auto;}
+.curriculum-wrap.newslist-container .shiherenqun{margin: .27rem auto;}
+.curriculum-wrap.newslist-container .shiherenqun .closes{width: 100%;text-align: center;font-family: fzltthft;color:#000000;font-weight: normal;font-size: .3rem;line-height: .4rem;margin-bottom: .13rem;}
+.curriculum-wrap.newslist-container .shiherenqun h3{font-family: fzltthft;width: 100%;color:#000000;font-weight: normal;font-size: .3rem;line-height: .4rem;margin-bottom: .27rem;}
+.curriculum-wrap.newslist-container .news-list li a .content .shiherenqun p{font-size: .3rem;}
+.curriculum-wrap.newslist-container .news-list li a .content .more{background-color: #000;color:#fff;font-family: fzlthft;letter-spacing: 1px;width: 3.73rem;}
+.curriculum-wrap.newslist-container .morebox{background-color: #d4d4dc;overflow: hidden;}
